# llphy_rust

./: .gitignore  README.md
rust/: Cargo.toml
rust/llphy_lib-260227/: Cargo.toml  pyproject.toml
rust/llphy_lib-260227/src/: fasta.rs  io.rs  lib.rs  main.rs  output.rs  pbar.rs  post_processor.rs  test_load_legacy_pdb_statistics.rs
rust/llphy_lib-260227/src/datatypes/: grid_score.rs  grid_scorer.rs  llphy_model.rs  mod.rs  reference_data.rs
rust/llphy_lib-260227/src/datatypes/llphy/: features.rs  mod.rs  model.rs  pdb_statistics.rs  post_processor.rs
rust/llphy_lib-260227/src/datatypes/llphy/features/: grid_decoder.rs  mod.rs  thresholds.rs
rust/llphy_lib-260227/src/datatypes/llphy/features/grid_scorer/: avg_sdev_db.rs  mod.rs  pair_freq_db.rs  xmer.rs  z_grid_db.rs
rust/llphy_lib-260227/src/datatypes/sequences/: aamap.rs  aaset.rs  aminoacid.rs  mod.rs
rust/llphy_lib-260227/src/datatypes/sequences/aamap/: aaweights.rs  mod.rs
rust/llphy_lib-260227/src/datatypes/sequences/aastring/: mod.rs
rust/llphy_lib-260227/src/datatypes/sequences/aastring/generic/: borrowed.rs  mod.rs  owned.rs
rust/llphy_lib-260227/src/features/: grid_decoder.rs  mod.rs  thresholds.rs
rust/llphy_lib-260227/src/features/grid_scorer/: avg_sdev_db.rs  mod.rs  pair_freq_db.rs  z_grid_db.rs
rust/llphy_lib-260227/src/featurizer/: grid_decoder.rs  mod.rs  thresholds.rs
rust/llphy_lib-260227/src/featurizer/grid_scorer/: avg_sdev_db.rs  mod.rs  pair_freq_db.rs  xmer.rs  z_grid_db.rs  z_grid_dense.rs
rust/llphy_lib-260227/src/featurizer/grid_scorer/no_simd/: avg_sdev_db.rs  mod.rs  pair_freq_db.rs  z_grid_db.rs
rust/llphy_lib-260227/src/featurizer/grid_scorer/simd/: avg_sdev_db.rs  mod.rs  pair_freq_db.rs  xmer.rs  z_grid_db.rs
rust/llphy_lib-260227/src/load_legacy/: mod.rs  model.rs  pdb_statistics.rs  reference_g2w_scores.rs
rust/llphy_lib-260227/src/load_pkg_data/: grid_decoder.rs  grid_scorer.rs  mod.rs  post_processor.rs  reference_scores.rs
rust/llphy_lib-260227/src/load_pkg_data/legacy/: grid_decoder.rs  grid_scorer.rs  post_processor.rs  reference_scores.rs
rust/llphyscore/: Cargo.toml  build.rs
rust/llphyscore/src/: fasta.rs  main.rs  output.rs  utils.rs
rust/llphyscore_buildpd/: Cargo.toml  build.rs
rust/llphyscore_buildpd/src/: grid_decoders.rs  main.rs  reference_data.rs
rust/llphyscore_buildpd/src/grid_scorers/: load.rs  mod.rs
rust/llphyscore_core/: Cargo.toml
rust/llphyscore_core/src/: featurizer.rs  lib.rs  load_pkg_data.rs  utils.rs
rust/llphyscore_core/src/datatypes/: mod.rs
rust/llphyscore_core/src/datatypes/llphy/: consts.rs  features.rs  grid_decoder.rs  mod.rs  model_train_base.rs  post_processor.rs  score_type.rs
rust/llphyscore_core/src/datatypes/llphy/grid_scorer/: avg_sdev_db.rs  mod.rs  pair_freq_db.rs  xmer.rs  z_grid_db.rs
rust/llphyscore_core/src/datatypes/llphy/grid_scorer/no_simd/: avg_sdev_db.rs  mod.rs  pair_freq_db.rs  z_grid_db.rs
rust/llphyscore_core/src/datatypes/llphy/grid_scorer/simd/: avg_sdev_db.rs  mod.rs  pair_freq_db.rs  z_grid_db.rs
rust/llphyscore_core/src/datatypes/sequences/: aamap.rs  aminoacid.rs  mod.rs
rust/llphyscore_core/src/datatypes/sequences/aastring/: mod.rs
rust/llphyscore_core/src/datatypes/sequences/aastring/generic/: borrowed.rs  mod.rs
rust/llphyscore_pylib/: Cargo.toml  build.rs  pyproject.toml
rust/llphyscore_pylib/src/: calculator.rs  lib.rs  transform_scores.rs  utils.rs
(+3 files in other folders)
