[package]
name = "llphyscore_dev"
version = "0.1.0"
edition = "2024"

[lib]
name = "llphyscore_dev"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.102"
borsh = { version = "1.6.0", features = ["derive"] }
bumpalo = { version = "3.20.2", features = ["collections"] }
bytesize = "2.3.1"
clap = { version = "4.5.60", features = ["derive"] }
csv = "1.4.0"
indicatif = "0.18.4"
pyo3 = { version = "0.28.2", features = ["anyhow", "extension-module"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-pickle = "1.2.0"
thiserror = "2.0.18"

[features]
simd = []
