[package]
name = "llphyscore_core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
borsh = { version = "1.6.0", features = ["derive"] }
bumpalo = { version = "3.20.2", features = ["collections"] }
clap = { version = "4.5.60", features = ["derive"] }
indicatif = "0.18.4"

[features]
simd = []
